syntax = "proto3";

import "akkaserverless/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package io.mystore.shipping.api;

option java_outer_classname = "ShipOrderItemApi";

service ShipOrderItemService {
  option (akkaserverless.codegen) = {
    value_entity: {
      name: "io.mystore.shipping.entity.ShipOrderItem"  //
      entity_type: "order"
      state: "io.mystore.shipping.entity.ShipOrderItemState"
    }
  };

  rpc AddShipOrderItem(ShipOrderItem) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/ship-order-item/{customer_id}/{cart_id}/{product_id}/add"
      body: "*"
    };
  }

  rpc GetShipOrderItem(GetShipOrderItemRequest) returns (ShipOrderItem) {
    option (google.api.http) = {
      get: "/ship-order-item/{customer_id}/{cart_id}/{product_id}"
    };
  }
}

message GetShipOrderItemRequest {
  string customer_id = 1;
  string cart_id = 2 [(akkaserverless.field).entity_key = true];
  string product_id = 3 [(akkaserverless.field).entity_key = true];
}

message ShipOrderItem {
  string customer_id = 1;
  string order_id = 2 [(akkaserverless.field).entity_key = true];
  string product_id = 3 [(akkaserverless.field).entity_key = true];
  string product_name = 4;
  int32 quantity = 5;
  google.protobuf.Timestamp ordered_utc = 6;
}
